--- a/fly.html
+++ b/fly.html
@@ -9,7 +9,7 @@ canvas {
 }
 </style>
 </head>
-
+<title>fly.html-mcr130102小游戏</title>
 <body onload="startGame()">
 <script>
 var myGamePiece;
@@ -132,6 +132,7 @@ function accelerate(n) {
 <br><br>
 <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">加速</button>
 <p>请使用加速按钮保持在空中。</p>
+<p>不能碰红色柱子。</p>
 <p>你能玩多久？</p>
 </body>
 </html>
