--- a/2048.html
+++ b/2048.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
 <title>2048.html-mcr130102小游戏</title>
+</head>
+<body>
 <script type="text/javascript">
     var can_up = true;        //可向上移动
     var can_down = true;    //可向下移动
@@ -265,3 +271,6 @@
     },10);
 
 </script>
+
+</body>
+</html>
